--- a/css/header.css
+++ b/css/header.css
@@ -12,13 +12,20 @@ a{
   display: flex;
   border-top: 1px solid #c4c2c3;
   justify-content: space-between;
+  padding:0 60px;
 }
 /* 左边部分样式 */
+.left{
+  margin:20px 0 0 0 ;
+}
 .left>img{
   width:230px;
   height:27px;
 }
 /* 中间部分样式 */
+.middle{
+  margin: 0 25px 0 0;
+}
 /* 设置li浮动 */
 .middle-ul>li{
   float:left;
@@ -46,7 +53,17 @@ a{
   border-bottom:1px solid #ff6c5c;
 }
 /* 右边部分样式 */
+/* .right{
+  margin:
+} */
 /* 发布房源按钮样式 */
 .right-btn{
-  
+  width:128px;
+  height:39px;
+  border:0;
+  border-radius:4px;
+  background:#ff9180;
+  color:#fff;
+  font-size:16px;
+  margin:3px 6px 0 0 ;
 }
