--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,4 @@
-/* 简单css reset */
+
 *{margin: 0;padding:0;box-sizing: border-box}
 ul{
   list-style: none;
@@ -113,7 +113,7 @@ a{
   font-size:26px;
   margin-bottom: 5px;
 }
-/* 为什么在木鸟订房 */
+
 .ad-box{
   width:100%;
   background:url(../public/index/s_mn_ad_bg.jpg);
@@ -131,7 +131,7 @@ a{
   color:#fff;
   font-size:28px;
 }
-/* 图标部分 */
+
 .adbox-con-box{
   width:100%;
   height:180px;
@@ -139,7 +139,7 @@ a{
   display: flex;
   justify-content: space-around;
 }
-/* 图标基本样式 */
+
 .icon-posi{
   display:inline-block;
   width:105px;
@@ -163,15 +163,14 @@ a{
   
   box-shadow: 0 0 5px #1877a6;
 }
-/*字体设置*/
+
 .icon-bottom{
   font-weight: 500;
   color:#fff;
   font-size:17px;
   margin:20px 0;
 }
-// 5.一种居所，一种情怀
-// 上外边距
+
 .features-box{
   width:100%;
   margin:0 auto;
@@ -182,14 +181,14 @@ a{
   width:1200px;
   margin:0 auto;
 }
-// 标题部分
+
 .features-tit{
   margin:0 auto; 
   padding:30px 0;
   width:100%;
   text-align:center;
 }
-// 字体样式
+
 .features-h2{
   color:#353535;
   font-size:28px;
@@ -201,7 +200,7 @@ a{
   width:100%;
 }
 .features-span1{
-  color:#353535;
+  color:#888;
   font-size:16px;
   line-height: 45px;
 }
@@ -211,9 +210,13 @@ a{
   border-radius:15px;
   text-align: center;
   font-size:12px;
-  padding:6px 13px;
+  padding:8px 11px;
 }
-// 图片部分
+.features-span2>a:hover{
+  background:#f30;
+  color:#fff;
+}
+
 .features-pic{
   width:100%;
   height:900px;
@@ -250,4 +253,93 @@ a{
   color:#fff;
   font-size:14px;
   font-weight: 500;
+}
+.story-box{
+  width:100%;
+  margin:0 auto;
+  padding:20px 0;
+  background:#f0f0f0;
+}
+.story-con{
+  width:1200px;
+  margin:0 auto;
+}
+.story-tit{
+  text-align: center;
+  margin:0 auto 38px auto;
+}
+.story-main{
+  width:100%;
+  height:380px;
+  position: relative;
+}
+#story-list{
+  width:100%;
+  height:380px;
+}
+.story-module{
+  width:1200px;
+  padding:0 10px;
+}
+.story-img{
+  float: left;
+  width: 790px;
+  height: 380px;
+}
+.story-introduce{
+  float:left;
+  padding: 20px;
+  width: 390px;
+  height: 380px;
+  background: #fff;
+}
+.story-introduce-h3{
+  color:#f30;
+  margin:0 auto;
+  width:100%;
+  height:50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: center;
+  padding:0 50px;
+}
+.story-introduce-h3>a{
+  color:#f30;
+  font-size:19px;
+  font-weight: 500;
+  line-height:50px;
+}
+.story-introduce-span{
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 310px;
+  color: #888;
+  font-size:14px;
+  text-indent: 28px;
+  line-height: 22px;
+}
+.story-introduce-span>a{
+  float: right;
+  color:#09f;
+}
+
+#story-nav{
+  position: absolute;
+  width:100px;
+  height:20px;
+  top:92%;
+  left:79%;
+}
+
+#story-nav>a{
+  width: 10px;
+  height:10px;
+  background:#ddd;
+  float:left;
+  margin:5px;
+}
+#story-nav .active{
+  background:#f30;
 }
