--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,12 @@ ul {
 
 a {
   text-decoration: none; }
+
+body {
+  background: #f0f0f0; }
+
+.good {
+  background: #ffffff; }
 
 .good-ul {
   padding: 30px 0;
@@ -328,4 +335,178 @@ a {
 #story-nav .active {
   background: #f30; }
 
-/*# sourceMappingURL=index.css.map */
+.s-mn-column {
+  width: 100%;
+  margin: 20px auto;
+  height: 276px;
+  background: #f0f0f0; }
+
+.s-mn-column-center {
+  width: 1180px;
+  margin: 0 auto; }
+
+.s-mn-tit {
+  width: 580px;
+  line-height: 40px; }
+
+.s-mn-tit::after {
+  display: block;
+  content: "";
+  clear: both; }
+
+.s-mn-information {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  width: 580px;
+  height: 230px;
+  margin-top: 8px; }
+
+.sm-n-t1 {
+  float: left;
+  padding-left: 15px;
+  width: 180px;
+  height: 40px;
+  background: url(../public/index/title_icon.png) center left no-repeat;
+  background-size: 10px;
+  color: #555;
+  font-size: 16px; }
+
+.sm-n-more {
+  float: right;
+  width: 120px;
+  height: 40px;
+  text-align: right;
+  font-size: 14px; }
+
+.sm-n-more > a {
+  color: #555;
+  font-size: 13px;
+  font-family: "宋体"; }
+  .sm-n-more > a:hover {
+    color: #f30; }
+
+.information-box {
+  float: left;
+  width: 580px; }
+
+.information-box::after {
+  display: block;
+  content: "";
+  clear: both; }
+
+.s_mn_information_img {
+  float: left;
+  width: 290px;
+  height: 230px; }
+
+.s_mn_information_img > img {
+  width: 290px;
+  height: 230px; }
+
+.s_mn_information_list {
+  position: absolute;
+  top: 0;
+  left: 281px;
+  width: 300px; }
+
+.s_mn_information_list {
+  position: absolute;
+  top: 0;
+  left: 281px;
+  width: 300px; }
+
+.s_mn_inf_list_a {
+  display: block;
+  width: 300px;
+  height: 46px;
+  background: url(../public/index/s_mn_inf_list_abg.png) 0 -46px no-repeat;
+  color: #555;
+  text-indent: 20px;
+  font-size: 14px;
+  line-height: 46px; }
+
+.s_mn_information_list > li:first-child > a {
+  background: url(../public/index/s_mn_inf_list_abg.png) 0 0 no-repeat;
+  color: #fff; }
+
+.s_mn_inf_list_a:hover {
+  background: url(../public/index/s_mn_inf_list_abg.png) 0 0 no-repeat;
+  color: #fff; }
+
+.last-box {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin-left: 20px;
+  width: 580px;
+  height: 276px; }
+
+.s_mn_li_nav {
+  float: right;
+  width: 90px;
+  height: 40px; }
+
+.s_mn_li_nav li {
+  float: left;
+  line-height: 40px; }
+
+.s_mn_li_nav li a {
+  display: block;
+  margin: 10px 5px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 15px;
+  font-family: "宋体"; }
+
+.s_mn_li_nav_a {
+  background: url(../public/index/s_mn_li_nav.png) -23px 0 no-repeat; }
+
+.s_mn_li_nav > li:first-child > a {
+  background: url(../public/index/s_mn_li_nav.png) #f30 0 0 no-repeat; }
+
+.s_mn_li_nav_a:hover {
+  background: url(../public/index/s_mn_li_nav.png) #f30 0 0 no-repeat; }
+
+.s_mn_lates_houselist {
+  position: absolute;
+  margin-top: 6px;
+  width: 1740px;
+  height: 230px; }
+
+.s_mn_lates_house2 {
+  margin-left: 22px; }
+
+.s_mn_lates_house1, .s_mn_lates_house2 {
+  float: left;
+  width: 280px;
+  height: 230px;
+  background: #fff; }
+
+.s_mn_lates_houseimg > img {
+  width: 280px;
+  height: 176px; }
+
+.s_mn_lates_housetitle {
+  height: 30px;
+  color: #555;
+  font-size: 14px;
+  padding: 0 15px; }
+
+.s_mn_lates_houseintroduce {
+  display: flex;
+  justify-content: space-between;
+  padding: 0  15px; }
+
+.s_mn_house_area {
+  float: left;
+  color: #888;
+  font: 12px/20px "宋体"; }
+
+.s_mn_house_price {
+  color: #f30;
+  font: 14px/20px "microsoft yahei"; }
