--- a/css/mobile.css
+++ b/css/mobile.css
@@ -53,3 +53,68 @@ a {
   padding: 80px 24px 0 24px;
   width: 294px;
   height: 414px; }
+
+.w_download_fuctionbg {
+  width: 100%;
+  background: #ffffff; }
+
+.w_download_fuction {
+  width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 30px; }
+
+.w_download_fuction::after {
+  display: block;
+  content: "";
+  clear: both; }
+
+.w_download_fuctionbox {
+  float: left;
+  width: 180px;
+  margin: 30px 50px;
+  color: #555;
+  font: 12px "microsoft yahei"; }
+  .w_download_fuctionbox .w_download_fuctioname1 {
+    background: url(../public/mobile/fkapp_icon.png) left 20px no-repeat; }
+  .w_download_fuctionbox .w_download_fuctioname2 {
+    background: url(../public/mobile/fkapp_icon.png) -180px 20px no-repeat; }
+  .w_download_fuctionbox .w_download_fuctioname3 {
+    background: url(../public/mobile/fkapp_icon.png) -360px 20px no-repeat; }
+  .w_download_fuctionbox .w_download_fuctioname4 {
+    background: url(../public/mobile/fkapp_icon.png) -540px 20px no-repeat; }
+
+.w_download_fuctioname1,
+.w_download_fuctioname2,
+.w_download_fuctioname3,
+.w_download_fuctioname4 {
+  padding-top: 200px;
+  width: 100%;
+  height: 240px;
+  text-align: center;
+  font: 20px/40px "microsoft yahei"; }
+
+.w_download_fuctionfb {
+  width: 100%;
+  font: 14px/28px "microsoft yahei";
+  text-indent: 30px; }
+
+.w_download_helpbg {
+  background: #333;
+  padding: 55px 0;
+  width: 100%; }
+
+.w_download_help {
+  width: 1200px;
+  margin: 0 auto;
+  height: 195px;
+  border-bottom: 1px solid #444; }
+
+.w_download_helptxt {
+  width: 580px;
+  padding-left: 120px;
+  float: left;
+  font: 16px/30px "microsoft yahei";
+  color: #fff;
+  margin-top: 40px; }
+  .w_download_helptxt span {
+    font-size: 28px; }
