--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -61,4 +61,86 @@ a{
   height:414px;
 }
 // 第二部分
+// 1.设置最外层div
+.w_download_fuctionbg{
+  width:100%;
+  background:#ffffff;
+}
+// 2.第二次div，设置内容居中显示
+.w_download_fuction{
+  width:1200px;
+  margin:0 auto;
+  padding-bottom:30px;
+}
+// 2.1解决因为子元素浮动而引起的高度坍塌
+.w_download_fuction::after{
+  display:block;
+  content:"";
+  clear:both;
+}
+// 3.单个项目样式
+// 3.1设置浮动
+.w_download_fuctionbox{
+  float:left;
+  width:180px;
+  margin:30px 50px;
+  color:#555;
+  font:12px "microsoft yahei";
+  $px:-180px;
+  .w_download_fuctioname1{
+  background:url(../public/mobile/fkapp_icon.png) left 20px no-repeat ;
+  }
+  .w_download_fuctioname2{
+    background:url(../public/mobile/fkapp_icon.png) $px 20px no-repeat ;
+  }
+  .w_download_fuctioname3{
+    background:url(../public/mobile/fkapp_icon.png) $px*2 20px no-repeat ;
+  }
+  .w_download_fuctioname4{
+    background:url(../public/mobile/fkapp_icon.png) $px*3 20px no-repeat ;
+  }
+}
+// 3.2设置背景图
+.w_download_fuctioname1,
+.w_download_fuctioname2,
+.w_download_fuctioname3,
+.w_download_fuctioname4{
+ padding-top:200px;
+  width:100%;
+  height:240px;
+  
+  text-align: center;
+  font: 20px/40px "microsoft yahei";
+}
+// 3.3设置字体
+.w_download_fuctionfb{
+  width:100%;
+  font:14px/28px "microsoft yahei";
+  text-indent: 30px;
+}
 // 第三部分
+// 1.设置背景
+.w_download_helpbg{
+  background:#333;
+  padding:55px 0;
+  width:100%;
+}
+// 2.内容居中显示和宽度
+.w_download_help{
+  width:1200px;
+  margin:0 auto;
+  height:195px;
+  border-bottom:1px solid #444;
+}
+// 3.设置字体样式
+.w_download_helptxt{
+  width: 580px;
+  padding-left: 120px;
+  float: left;
+  font: 16px/30px "microsoft yahei";
+  color: #fff;
+  margin-top: 40px;
+  span{
+    font-size:28px;
+  }
+}
