--- a/css/header.css
+++ b/css/header.css
@@ -6,17 +6,21 @@ ul{
 a{
   text-decoration: none;
 }
-
+body{
+  background:#f0f0f0;
+}
 /* 头部最外层div */
 .d-flex{
   display: flex;
   border-top: 1px solid #c4c2c3;
   justify-content: space-between;
-  padding:0 60px;
+  padding:0 32px;
+  min-width: 1200px;
 }
 /* 左边部分样式 */
 .left{
-  margin:20px 0 0 0 ;
+  margin:16px 0 0 0 ;
+  height:42px;
 }
 .left>img{
   width:230px;
@@ -24,7 +28,7 @@ a{
 }
 /* 中间部分样式 */
 .middle{
-  margin: 0 25px 0 0;
+  margin: 0 33px 0 0;
 }
 /* 设置li浮动 */
 .middle-ul>li{
@@ -44,26 +48,45 @@ a{
   width:90px;
   height:58px;
   color:#86929c;
-  background:#ffffff;
+  font-size:15px;
 }
 /* hover时的样式 */
 .middle-ul-link:hover{
-  background:#f8f8f8;
+  background:#f2f2f2;
+  border-left:1px solid rgba(0,0,0,.05);
+  border-right:1px solid rgba(0,0,0,.05);
   color:#fe7b6a;
   border-bottom:1px solid #ff6c5c;
+  
 }
 /* 右边部分样式 */
 /* .right{
   margin:
 } */
+.right{
+  margin:0 40px 0 0 ;
+}
 /* 发布房源按钮样式 */
 .right-btn{
   width:128px;
   height:39px;
   border:0;
-  border-radius:4px;
+  border-radius:6px;
   background:#ff9180;
   color:#fff;
   font-size:16px;
   margin:3px 6px 0 0 ;
+  cursor: pointer;
+  outline: none;
+}
+/* 字体大小 */
+.right-txt{
+  display: inline-block;
+  font-size:15px;
+  color:#555;
+  margin-top:3px;
+  cursor: pointer;
+}
+.right span:hover{
+  color:#fd6b5c;
 }
