--- a/css/search.css
+++ b/css/search.css
@@ -201,3 +201,62 @@ body {
   padding: 7px 0;
   border-bottom: 1px solid #eee;
   position: relative; }
+
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both; }
+
+.s_mn_screenqy {
+  float: left;
+  width: 100%; }
+
+.s_mn_screen_tit {
+  float: left;
+  width: 72px;
+  text-align: right;
+  margin-left: 0;
+  color: #AAAAAA;
+  font: 14px/30px "microsoft yahei"; }
+
+.f12 {
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px; }
+
+.w_listbx {
+  float: left;
+  width: 93px; }
+
+.w_listspan2 {
+  width: 50px;
+  height: 30px;
+  line-height: 30px;
+  color: #fff;
+  text-align: center; }
+  .w_listspan2 a {
+    color: #fff;
+    background-color: #FF6C5C;
+    display: block; }
+
+#list_tab li {
+  float: left;
+  width: 93px;
+  margin: 0 5px 0 0;
+  padding: 0;
+  height: 30px;
+  border: none; }
+
+#list_tab .w_listspan {
+  cursor: pointer;
+  padding: 0 26px 0 18px;
+  background: url(../public/search/list_more.png) no-repeat;
+  background-position: 72px -6px;
+  height: 12px; }
+
+#list_tab .w-listabfocus {
+  cursor: pointer;
+  padding: 6px 26px 7px 18px;
+  background: #ff6c5c url(../public/search/list_more.png) no-repeat;
+  background-position: 72px -29px;
+  color: #fff; }
