--- a/css/search.css
+++ b/css/search.css
@@ -8,7 +8,8 @@ ul {
   list-style: none; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #555; }
 
 body {
   background: #f0f0f0; }
@@ -220,13 +221,13 @@ body {
   font: 14px/30px "microsoft yahei"; }
 
 .f12 {
-  height: 30px;
-  line-height: 30px;
   font-size: 12px; }
 
 .w_listbx {
   float: left;
-  width: 93px; }
+  width: 93px;
+  height: 30px;
+  line-height: 30px; }
 
 .w_listspan2 {
   width: 50px;
@@ -246,17 +247,489 @@ body {
   padding: 0;
   height: 30px;
   border: none; }
-
 #list_tab .w_listspan {
   cursor: pointer;
   padding: 0 26px 0 18px;
   background: url(../public/search/list_more.png) no-repeat;
   background-position: 72px -6px;
   height: 12px; }
-
 #list_tab .w-listabfocus {
   cursor: pointer;
   padding: 6px 26px 7px 18px;
   background: #ff6c5c url(../public/search/list_more.png) no-repeat;
   background-position: 72px -29px;
   color: #fff; }
+
+#list_tab li:hover {
+  background: #ff6c5c;
+  color: #fff; }
+  #list_tab li:hover .w_listspan {
+    background-position: 72px -34px; }
+
+#w_listect div {
+  width: 1060px;
+  float: right;
+  padding: 10px 15px;
+  border: 1px solid  #ddd;
+  margin: 10px 0;
+  border-radius: 3px;
+  position: absolute;
+  left: 58px;
+  z-index: 1;
+  background: #fff;
+  top: 36px;
+  box-shadow: 0 1px 5px #ddd; }
+#w_listect a {
+  padding: 0 5px;
+  line-height: 24px;
+  margin-right: 15px;
+  display: inline-block;
+  font-family: "\5b8b\4f53"; }
+
+.s_mn_screenlist {
+  overflow: hidden; }
+
+.w_listspan3 {
+  width: 93px;
+  float: left;
+  margin: 0 5px 0 0;
+  display: block;
+  height: 30px;
+  overflow: hidden; }
+
+.s_mn_screenlist .w_listspan3 .s_mn_screen_aover, .s_mn_screenlist .w_listspan3 a:hover {
+  background: #FF6C5C;
+  color: #fff; }
+.s_mn_screenlist .w_listspan3 a {
+  font: 12px/30px "microsoft yahei";
+  padding: 0 13px;
+  display: inline-block;
+  color: #888; }
+
+.s_mn_mainbox {
+  width: 100%; }
+
+.s_mn_center {
+  margin: 0 auto;
+  padding: 10px 10px;
+  width: 1200px; }
+
+.s_mn_article {
+  width: 931px;
+  float: left; }
+
+.s_mn_detailsList_condition {
+  width: auto;
+  height: 52px;
+  border: 1px solid #ddd;
+  background: #f8f8f8; }
+
+.s_mn_ranking {
+  float: left;
+  font: 12px/50px "\5b8b\4f53";
+  color: #888;
+  text-indent: 10px; }
+  .s_mn_ranking a {
+    padding: 0 18px 0 10px; }
+    .s_mn_ranking a:hover {
+      color: #f30;
+      background: url(../public/search/arrowPic.png) 40px -26px no-repeat; }
+  .s_mn_ranking .descen_icon_over:hover, .s_mn_ranking .descen_icon:hover {
+    background: url(../public/search/arrowPic.png) 40px -38px no-repeat; }
+
+.descen_icon_over {
+  background: url(../public/search/arrowPic.png) 40px -38px no-repeat; }
+
+.descen_icon {
+  background: url(../public/search/arrowPic.png) 40px -14px no-repeat; }
+
+.ascend_icon {
+  background: url(../public/search/arrowPic.png) 40px 2px no-repeat; }
+
+.s_mn_search_navtag {
+  width: auto;
+  float: right;
+  font: 14px/50px "microsoft yahei";
+  color: #999;
+  padding: 0 5px;
+  height: 40px;
+  text-align: right; }
+  .s_mn_search_navtag a {
+    color: #999;
+    display: inline-block; }
+  .s_mn_search_navtag .s_red {
+    color: #f30; }
+
+.s_mn_detailslist {
+  margin-top: 10px;
+  width: 100%; }
+
+li.Lcon1 {
+  border: 1px solid #ccc;
+  background: #fff;
+  margin-bottom: 20px;
+  width: 931px;
+  float: left; }
+
+.s_mn_housebox {
+  width: 931px;
+  height: 262px; }
+
+.s_mn_house_images {
+  float: left;
+  position: relative;
+  width: 414px;
+  height: 262px; }
+
+.like_icon2 {
+  background: url(../public/search/w_list_icon.png) no-repeat -7px -3px; }
+
+.s_mn_house_like {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: block;
+  width: 37px;
+  height: 37px;
+  line-height: 800px; }
+
+.list_score {
+  position: absolute;
+  bottom: 15px;
+  left: 0;
+  width: 96px;
+  height: 44px; }
+
+.score_bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .68; }
+
+.tmc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-left: 14px;
+  color: #4aaffd;
+  font-size: 14px; }
+  .tmc span {
+    color: #fff;
+    font-size: 30px; }
+
+.s_mn_house_details {
+  float: right;
+  width: 515px; }
+
+.house_details_l {
+  float: left;
+  width: 365px;
+  padding: 0 10px;
+  overflow: hidden; }
+
+.s_mn_house_tit {
+  margin-top: 10px;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  height: 30px; }
+
+.s_mn_house_t1 {
+  color: #19b5fe;
+  font: 18px/30px "Microsoft Yahei";
+  display: inline-block;
+  letter-spacing: 1px; }
+
+.s_mn_house_introduction {
+  width: 100%;
+  height: 160px; }
+  .s_mn_house_introduction p {
+    color: #888888;
+    font: 14px/22px "Microsoft Yahei";
+    text-align: center;
+    width: 100%; }
+    .s_mn_house_introduction p span {
+      margin: 0 5px; }
+
+.list_address {
+  font-size: 12px;
+  height: 18px;
+  margin-top: 3px;
+  color: #AAAAAA;
+  text-align: center; }
+
+.address_icon {
+  display: inline-block;
+  width: 13px;
+  height: 17px;
+  background: url(../public/search/w_list_icon.png) -19px -68px no-repeat;
+  vertical-align: middle;
+  margin-right: 8px; }
+
+.s_mn_house_price2 {
+  width: 100%;
+  text-align: center;
+  color: #999;
+  font: normal 20px/40px "Microsoft Yahei";
+  margin-top: 13px; }
+  .s_mn_house_price2 span {
+    color: #fb8477;
+    font: normal 32px/40px "Microsoft YaHei"; }
+
+.s_mn_house_salebox {
+  width: 100%;
+  height: 24px;
+  text-align: center; }
+  .s_mn_house_salebox em {
+    font-size: 14px;
+    color: #fb8477;
+    font-style: normal;
+    margin-right: 10px; }
+
+.list_sale_icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: url(../public/search/w_list_icon.png) -18px -117px no-repeat;
+  vertical-align: middle; }
+
+.near_reserve {
+  width: 260px;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 14px;
+  color: #ccc;
+  height: 24px;
+  line-height: 24px; }
+
+.s_mn_house_information {
+  height: 60px;
+  position: relative;
+  text-align: center;
+  width: 100%; }
+  .s_mn_house_information a {
+    display: inline-block;
+    font: 12px/30px "宋体";
+    color: #888; }
+  .s_mn_house_information dd {
+    display: inline-block;
+    font: 14px/30px "Microsoft Yahei";
+    height: 60px;
+    color: #bbbbbb;
+    margin: 0 7px; }
+  .s_mn_house_information .comment_num {
+    margin: 0 auto;
+    width: 50px;
+    height: 32px;
+    border: 2px solid #ddd;
+    display: block;
+    border-radius: 3px;
+    color: #aaa;
+    font: 20px/28px "Microsoft YaHei"; }
+  .s_mn_house_information p {
+    font-size: 12px;
+    padding-left: 20px;
+    color: #bbbbbb; }
+  .s_mn_house_information dl {
+    display: inline-block;
+    width: auto; }
+
+.hr {
+  width: 260px;
+  height: 1px;
+  background: #ddd;
+  position: relative;
+  top: -10px;
+  left: 50%;
+  margin-left: -130px; }
+
+.list_picnum {
+  background: url(../public/search/w_list_icon.png) -17px -260px no-repeat; }
+
+.map_wz {
+  display: inline-block;
+  font: 14px/30px "Microsoft Yahei";
+  height: 60px;
+  color: #bbbbbb;
+  margin: 0 7px; }
+
+.list_seemap {
+  display: block;
+  width: 34px;
+  height: 34px;
+  background: url(../public/search/w_list_icon.png) -8px -308px no-repeat;
+  margin: 0 auto; }
+
+.house_details_r {
+  width: 150px;
+  height: 262px;
+  float: right;
+  border-left: 1px solid #e1e1e1;
+  position: relative; }
+
+.s_mn_landlord_information {
+  display: inline-block;
+  width: 100%;
+  height: 30px;
+  font: 12px/30px "宋体"; }
+
+.s_mn_landlordpic2 {
+  width: 85px;
+  height: 85px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 13px auto 0; }
+  .s_mn_landlordpic2 img {
+    height: 100%;
+    width: 100%; }
+
+.s_mn_landlordname2 {
+  text-align: center; }
+  .s_mn_landlordname2 a {
+    color: #ff6c5c;
+    font: 14px/30px "Microsoft Yahei"; }
+
+.landlordmark {
+  width: 100%; }
+  .landlordmark li {
+    height: 14px;
+    text-align: center;
+    color: #2ed182;
+    font: 14px/14px "Microsoft YaHei"; }
+    .landlordmark li a {
+      height: 14px;
+      text-align: center;
+      color: #2ed182;
+      font: 14px/14px "Microsoft YaHei"; }
+    .landlordmark li i {
+      display: inline-block;
+      vertical-align: middle; }
+
+.shenfen_icon {
+  width: 13px;
+  height: 13px;
+  background: url(../public/search/w_list_icon.png) -19px -368px no-repeat;
+  margin-right: 8px; }
+
+.true_icon {
+  width: 11px;
+  height: 9px;
+  background: url(../public/search/w_list_icon.png) no-repeat -20px -470px;
+  margin-left: 8px; }
+
+.zhima_icon {
+  width: 13px;
+  height: 13px;
+  background: url(../public/search/w_list_icon.png) -19px -417px no-repeat; }
+
+.list_zhimatip {
+  position: absolute;
+  left: 47px;
+  top: 25px;
+  width: 142px;
+  padding: 10px;
+  border: 1px solid #efd052;
+  background: #fff8da;
+  color: #333;
+  line-height: 18px;
+  font-size: 12px;
+  z-index: 2;
+  text-align: left; }
+
+.phone-ewm {
+  text-align: center;
+  padding: 15px 0;
+  width: 100%;
+  position: absolute;
+  border-top: 1px solid #cccccc;
+  background: #fff;
+  bottom: -46px;
+  z-index: 99; }
+
+.phone-ewm-info {
+  font-size: 12px;
+  color: #ff9180;
+  margin: 0 22px; }
+
+.weblt {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  overflow: hidden;
+  height: 28px; }
+  .weblt a {
+    display: inline-block;
+    width: 90px;
+    height: 28px;
+    border: 2px solid #19b5fe;
+    color: #19b5fe;
+    text-align: center;
+    line-height: 24px;
+    font-size: 14px;
+    border-radius: 14px; }
+
+.smfy_icon {
+  display: inline-block;
+  width: 63px;
+  top: 8px;
+  left: 6px;
+  height: 50px;
+  position: absolute;
+  background: url(../public/search/smfy_xq2.png); }
+
+.comment_icon {
+  background: url(../public/search/w_list_icon.png) -18px -160px no-repeat; }
+
+.list_recommend {
+  background: url(../public/search/w_list_icon.png) -18px -210px no-repeat; }
+
+.page_city {
+  display: inline-block;
+  margin: 0 20px;
+  color: #555555;
+  font-size: 14px; }
+  .page_city a {
+    color: #19B5FE; }
+
+.s_mn_page_bar {
+  height: 30px;
+  padding: 5px 0px;
+  margin: 25px 0;
+  display: inline-block;
+  width: 100%;
+  text-align: center; }
+  .s_mn_page_bar a {
+    display: inline-block;
+    margin: 0 2px;
+    padding: 0 10px;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+    font: 12px/25px "Microsoft YaHei"; }
+    .s_mn_page_bar a:hover {
+      background: #ff6c5c;
+      color: #fff;
+      border: 1px solid #e46355; }
+
+hr {
+  clear: both;
+  box-sizing: content-box;
+  height: 0;
+  border: 0;
+  border-bottom: 1px solid #f0f0f0; }
+
+.s_mn_sidebar {
+  width: 234px;
+  float: right;
+  margin: 0;
+  border: 1px solid #DDDDDD;
+  background-color: #fff; }
+
+/*# sourceMappingURL=search.css.map */
