--- a/scss/search.scss
+++ b/scss/search.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 // reset
 *{margin: 0;padding:0;box-sizing: border-box}
 ul{
@@ -5,6 +6,7 @@ ul{
 }
 a{
   text-decoration: none;
+  color:#555;
 }
 body{
   background:#f0f0f0;
@@ -246,13 +248,13 @@ body{
   font: 14px/30px "microsoft yahei";
 }
 .f12{
-  height:30px;
-  line-height:30px;
   font-size:12px;
 }
 .w_listbx{
   float:left;
   width:93px;
+  height:30px;
+  line-height:30px;
 }
 .w_listspan2{
   width:50px;
@@ -291,3 +293,547 @@ body{
 }
 } 
 // 悬浮li时的样式
+#list_tab li:hover{
+  background:#ff6c5c;
+  color:#fff;
+  .w_listspan{
+    background-position:72px -34px; 
+  }
+}
+// 鼠标悬浮时显示的列表
+#w_listect{
+  div{
+    width:1060px;
+    float:right;
+    padding:10px 15px;
+    border:1px solid  #ddd;
+    margin:10px 0;
+    border-radius: 3px;
+    position: absolute;
+    left:58px;
+    z-index: 1;
+    background:#fff;
+    top:36px;
+    box-shadow: 0 1px 5px #ddd; 
+  }
+  a{
+    padding:0 5px;
+    line-height:24px;
+    margin-right: 15px;
+    display: inline-block;
+    font-family: "\5b8b\4f53";
+  }
+}
+// 房屋类型
+.s_mn_screenlist{
+  overflow: hidden;
+}
+// 字体以及元素大小
+.w_listspan3{
+    width: 93px;
+    float: left;
+    margin: 0 5px 0 0;
+    display: block;
+    height: 30px;
+    overflow: hidden;
+}
+// 背景和颜色
+.s_mn_screenlist .w_listspan3{
+  .s_mn_screen_aover{
+    background: #FF6C5C;
+    color:#fff;
+  }
+  a:hover{
+    @extend .s_mn_screen_aover; 
+  }
+  a{
+    font: 12px/30px "microsoft yahei";
+    padding:0 13px;
+    display:inline-block;
+    color:#888;
+  }
+}
+// 二、主要内容区
+.s_mn_mainbox{
+  width:100%;
+}
+// **内容区
+.s_mn_center{
+  margin:0 auto;
+  padding:10px 10px;
+  width:1200px;
+}
+// 1.左边 展示房源
+.s_mn_article{
+  width:931px;
+  float:left;
+}
+// 1.1标题
+.s_mn_detailsList_condition{
+  width:auto;
+  height:52px;
+  border:1px solid #ddd;
+  background:#f8f8f8;
+}
+.s_mn_ranking{
+  float:left;
+  font: 12px/50px "\5b8b\4f53";
+  color:#888;
+  text-indent:10px;
+  a {
+    padding:0 18px 0 10px;
+    &:hover{
+      color:#f30;
+      background: url(../public/search/arrowPic.png) 40px -26px  no-repeat;
+    }
+  }
+  .descen_icon_over:hover,.descen_icon:hover{
+    background:url(../public/search/arrowPic.png) 40px -38px  no-repeat;
+  }
+}
+// 排序方式，
+// 选中的排序方式
+.descen_icon_over{
+  background:url(../public/search/arrowPic.png) 40px -38px  no-repeat;
+}
+// 降序排列
+.descen_icon{
+  background:url(../public/search/arrowPic.png) 40px -14px no-repeat;
+}
+// 升序排列
+.ascend_icon{
+  background:url(../public/search/arrowPic.png) 40px 2px no-repeat;
+}
+.s_mn_search_navtag{
+  width:auto;
+  float:right;
+  font: 14px/50px "microsoft yahei";
+  color:#999;
+  padding:0 5px;
+  height:40px;
+  text-align:right;
+  a{
+    color:#999;
+    display:inline-block;
+  }
+  .s_red{
+    color:#f30;
+  }
+}
+// 1.2main主要
+.s_mn_detailslist{
+  margin-top:10px;
+  width:100%;
+}
+li.Lcon1{
+  border: 1px solid #ccc;
+  background:#fff;
+  margin-bottom:20px;
+  width:931px;
+  float:left; 
+}
+.s_mn_housebox{
+  width:931px;
+  height:262px;
+}
+// 左边房源图片
+.s_mn_house_images{
+  float:left;
+  position: relative;
+  width:414px;
+  height:262px;
+}
+// 精灵图公用样式
+.like_icon2{
+  background:url(../public/search/w_list_icon.png ) no-repeat -7px -3px;
+} 
+// 设置小图标位置
+.s_mn_house_like{
+  position: absolute;
+  top:10px;
+  right:20px;
+  display: block;
+  width:37px;
+  height:37px;
+  line-height:800px;  
+}
+.list_score{
+  position: absolute;
+  bottom:15px;
+  left:0;
+  width:96px;
+  height:44px;
+}
+// 设置mask
+.score_bg{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:#000;
+  opacity: .68;
+}
+.tmc{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  padding-left:14px;
+  color:#4aaffd;
+  font-size:14px;
+  span{
+    color:#fff;
+    font-size:30px;
+  }
+}
+// 右 房源详情
+.s_mn_house_details{
+  float:right;
+  width:515px;
+}
+.house_details_l{
+  float:left;
+  width:365px;
+  padding:0 10px;
+  overflow:hidden;
+}
+.s_mn_house_tit{
+  margin-top:10px;
+  text-align:center;
+  overflow:hidden;
+  width:100%;
+  height:30px;
+}
+.s_mn_house_t1{
+  color: #19b5fe;
+  font: 18px/30px "Microsoft Yahei";
+  display: inline-block;
+  letter-spacing: 1px;
+}
+.s_mn_house_introduction{
+  width:100%;
+  height:160px;
+  p{
+    color: #888888;
+    font: 14px/22px "Microsoft Yahei";
+    text-align: center;
+    width:100%;
+    span{
+      margin:0 5px;
+    }
+  }
+}
+// 房源地址
+.list_address{
+  font-size: 12px;
+  height: 18px;
+  margin-top: 3px;
+  color: #AAAAAA;
+  text-align: center
+}
+// 小图标
+.address_icon{
+  display:inline-block;
+  width:13px;
+  height:17px;
+  background:url(../public/search/w_list_icon.png) -19px -68px no-repeat;
+  vertical-align: middle;
+  margin-right:8px;
+}
+// 房源价格
+.s_mn_house_price2{
+  width:100%;
+  text-align:center;
+  color:#999;
+  font: normal 20px/40px "Microsoft Yahei";
+  margin-top: 13px;
+  span{
+    color: #fb8477;
+    font: normal 32px/40px "Microsoft YaHei";
+  }
+}
+// 房源折扣
+.s_mn_house_salebox{
+  width:100%;
+  height:24px;
+  text-align:center;
+  em{
+    font-size: 14px;
+    color: #fb8477;
+    font-style: normal;
+    margin-right: 10px;
+  }
+}
+.list_sale_icon{
+  display: inline-block;
+  width:15px;
+  height:15px;
+  background: url(../public/search/w_list_icon.png) -18px -117px no-repeat;
+  vertical-align: middle;
+}
+// 近期预定
+.near_reserve{
+  width:260px;
+  text-align: center;
+  margin:0 auto;
+  font-size:14px;
+  color:#ccc;
+  height:24px;
+  line-height:24px;
+}
+.s_mn_house_information{
+  height:60px;
+  position: relative;
+  text-align: center;
+  width:100%;
+  a{
+    display: inline-block;
+    font: 12px/30px "宋体";
+    color:#888;
+  }
+  dd{
+    display: inline-block;
+    font: 14px/30px "Microsoft Yahei";
+    height: 60px;
+    color: #bbbbbb;
+    margin: 0 7px;
+  }
+  .comment_num{
+    margin:0 auto;
+    width:50px;
+    height:32px;
+    border: 2px solid #ddd;
+    display: block;
+    border-radius:3px;
+    color:#aaa;
+    font: 20px/28px "Microsoft YaHei";
+  }
+  p{
+    font-size: 12px;
+    padding-left: 20px;
+    color: #bbbbbb;
+  }
+  dl{
+    display:inline-block;
+    width:auto;
+  }
+}
+// 水平分割线
+.hr{
+  width:260px;
+  height:1px;
+  background:#ddd;
+  position: relative;
+  top:-10px;
+  left:50%;
+  margin-left:-130px; 
+}
+// 房间图片
+.list_picnum{
+  background: url(../public/search/w_list_icon.png) -17px -260px no-repeat;
+}
+.map_wz{
+  display: inline-block;
+    font: 14px/30px "Microsoft Yahei";
+    height: 60px;
+    color: #bbbbbb;
+    margin: 0 7px;
+}
+.list_seemap{
+  display: block;
+  width:34px;
+  height:34px;
+  background: url(../public/search/w_list_icon.png)  -8px -308px no-repeat;
+  margin:0 auto;
+}
+// 列表详情右边
+.house_details_r{
+  width:150px;
+  height:262px;
+  float:right;
+  border-left: 1px solid #e1e1e1;
+  position: relative;
+}
+.s_mn_landlord_information{
+  display:inline-block;
+  width: 100%; 
+  height:30px;
+  font: 12px/30px "宋体";
+}
+// 头像
+.s_mn_landlordpic2{
+  width: 85px;
+  height: 85px;
+  border: 1px solid #ccc;
+  overflow:hidden;
+  border-radius: 50%;
+  margin : 13px auto 0;
+  img{
+    height:100%;
+    width:100%;
+  }
+}
+.s_mn_landlordname2{
+  text-align: center;
+  a{
+    color: #ff6c5c;
+    font: 14px/30px "Microsoft Yahei";
+  }
+}
+.landlordmark{
+  width:100%;
+  li{
+    height: 14px;
+    text-align: center;
+    color: #2ed182;
+    font: 14px/14px "Microsoft YaHei";
+    a{
+      height:14px;
+      text-align:center;
+      color:#2ed182;
+      font:14px/14px "Microsoft YaHei";
+    }
+    i{
+      display: inline-block;
+      vertical-align: middle;
+    }
+  }
+}
+.shenfen_icon{
+  width:13px;
+  height:13px;
+  background:url(../public/search/w_list_icon.png) -19px -368px no-repeat;
+  margin-right:8px;
+}
+.true_icon{
+  width: 11px;
+  height: 9px;
+  background: url(../public/search/w_list_icon.png) no-repeat -20px -470px;
+  margin-left: 8px;
+}
+// 信用图标
+.zhima_icon{
+  width:13px;
+  height:13px;
+  background:url(../public/search/w_list_icon.png) -19px -417px no-repeat;  
+}
+// title悬浮提示文字
+.list_zhimatip{
+  position: absolute; 
+  left:47px;
+  top:25px;
+  width:142px;
+  padding:10px;
+  border: 1px solid #efd052;
+  background:#fff8da;
+  color:#333;
+  line-height:18px;
+  font-size:12px;
+  z-index:2;
+  text-align:left;
+}
+// 二维码
+.phone-ewm{
+  text-align:center;
+  padding:15px 0;
+  width:100%;
+  position: absolute;
+  border-top: 1px solid rgb(204,204,204);
+  background:#fff;
+  bottom: -46px;
+  z-index:99;
+}
+// 字体
+.phone-ewm-info{
+  font-size:12px;
+  color: #ff9180;
+  margin: 0 22px;
+}
+.weblt{
+  width:100%;
+  text-align:center;
+  position: absolute;
+  left:0;
+  bottom:10px;
+  overflow: hidden;
+  height:28px;
+  a{
+    display: inline-block;
+    width:90px;
+    height:28px;
+    border:2px solid #19b5fe;
+    color:#19b5fe;
+    text-align: center;
+    line-height: 24px;
+    font-size:14px;
+    border-radius:14px;
+  }
+}
+.smfy_icon{
+  display: inline-block;
+  width:63px;
+  top:8px;
+  left:6px;
+  height:50px;
+  position: absolute;
+  background:url(../public/search/smfy_xq2.png);
+}
+.comment_icon{
+  background: url(../public/search/w_list_icon.png) -18px -160px no-repeat;
+}
+.list_recommend{
+  background: url(../public/search/w_list_icon.png) -18px -210px no-repeat;
+}
+// 地图位置
+// 标题部分
+// 1.3搜索结果 
+.page_city{
+  display: inline-block;
+  margin: 0 20px;
+  color: #555555;
+  font-size: 14px;
+  a{
+    color:#19B5FE;
+  }
+}
+// 1.4换页按钮组
+.s_mn_page_bar{
+  height: 30px;
+  padding: 5px 0px;
+  margin: 25px 0;
+  display: inline-block;
+  width:100%;
+  text-align: center; 
+  a{
+    display: inline-block;
+    margin: 0 2px;
+    padding: 0 10px;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+    font: 12px/25px "Microsoft YaHei";
+    &:hover{
+      background:#ff6c5c;
+      color:#fff;
+      border: 1px solid #e46355;
+    }
+  }
+}
+// 分割线
+hr{
+  clear: both;
+  box-sizing: content-box;
+  height: 0;
+  border: 0;
+  border-bottom: 1px solid #f0f0f0;
+}
+// 2.右边推荐房源
+.s_mn_sidebar{
+  width: 234px;
+    float: right;
+    margin: 0;
+    border: 1px solid #DDDDDD;
+    background-color: #fff;
+}
+// **最近浏览
