--- a/scss/search.scss
+++ b/scss/search.scss
@@ -836,6 +836,36 @@ hr{
     border: 1px solid #DDDDDD;
     background-color: #fff;
 }
+.w_listbz{
+  width: 234px;
+  height: 288px;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+}
+.w_listbzicon{
+  width: 100%;
+  height: 167px;
+  text-align: center;
+}
+.w_listbzul{
+  margin: 0 auto;
+    padding: 8px 0;
+    width: 200px;
+    border-top: 1px solid #ddd;
+    li{
+      margin-bottom: 5px;
+    padding-left: 25px;
+    width: 173px;
+    height: 20px;
+    background: url(//assets.muniao.com/assets2/2015/images/bz_smallicon.png) center left no-repeat;
+    color: #888;
+    line-height: 20px;
+    span{
+      font-size:14px;
+      color:#888;
+    }
+    }
+}
 // **最近浏览
 // 最外层div
 .s_mn_recommended_bottom{
